feat: academic questions
